- PSR-2 adjustments (mamba)
- replaced intval() with (int) (mamba)
- XOOPS 2.5.8, PHP 7 adjustments (mamba)
- moved functions to Utilities class (mamba)
- addNavigation(basename(__FILE__)) (mamba)
- removed @version (mamba)
- replaced <b /> with <b> (mamba)
- Unnecessary double quotes (mamba)
- reference mismatch (mamba)
- partial conversion to $GLOBALS (mamba)

TODO: Needs code cleanup

=========================================================
1.06 RC 2                       NOT RELEASED
=========================================================

- added language variables to block descriptions (mamba)
- some cosmetic source code formatting (mmamba)
- improved consistency of language variable naming for cloning (mamba)
- added DirectoryChecker (mamba)
- Added install.php file (txmodxoops)
- fixed bug with video thumbnail (alain01)
- moved /css and /images to /assets (mamba)
- renamed template extensions from .html to .tpl (mamba)

=========================================================
1.06 RC 1                               2013-06-16
=========================================================

- removed social bookmarks for: simpy, spurl, wink (cesagonchu/mamba)
- English corrections (cesagonchu/mamba)
- fixed bug with with "expired" icon (mamba)
- fixed bug with approving submitted video (mamba)
- added toggle for online/offline status (mamba)

=========================================================
1.06 Beta 2                             2013-06-16
=========================================================

- removed redundant PHP Closing tags (mamba)
- replaced deprecated HTML tags (mamba)
- replaced hard-coded directory references (mamba)
- added XoopsTree locally (mamba)
- added highlighter for non-empty alphabet listing (mamba)
- reformatted code according to PSR-2
- added directory check for directories for images/videos

=========================================================
1.06 Beta1                                  2013-01-02